--- a/projects/ng-bootstrap-addons/inputs/src/ac-search-lov/components/ac-collapse/ac-collapse.component.html
+++ b/projects/ng-bootstrap-addons/inputs/src/ac-search-lov/components/ac-collapse/ac-collapse.component.html
@@ -1,4 +1,4 @@
-<div class="bg-white rounded-2 rounded-top-0 shadow-sm p-3 position-absolute top-100 start-0 z-3 w-100 no-collapse fade-in">
+<div class="rounded-2 rounded-top-0 shadow-sm p-3 position-absolute top-100 start-0 z-3 w-100 no-collapse fade-in card">
   @defer(on viewport; prefetch on idle) {
     @if(itemsLoaded()){
         <div class="d-flex justify-content-between align-items-center mb-4">
