--- a/projects/demo/src/app/components/ac-search-sample/ac-search-sample.component.html
+++ b/projects/demo/src/app/components/ac-search-sample/ac-search-sample.component.html
@@ -4,6 +4,7 @@
         [acUrl]="`${environment.OMDb_API.apiUrl}?s=:imdbID&apikey=${environment.OMDb_API.key}`"
         [map]="mapConfig"
         searchName="s"
+        pattern=":imdbID - :Title (:Year)"
         [(ngModel)]="selectedMovie"
         [resultPath]="{lov: 'Search', autocomplete: 'Search'}"
         [required]="true">
