--- a/projects/ng-bootstrap-addons/inputs/src/ac-search-lov/components/ac-card/ac-card.component.html
+++ b/projects/ng-bootstrap-addons/inputs/src/ac-search-lov/components/ac-card/ac-card.component.html
@@ -7,16 +7,33 @@
 
         <div>
             <h6 class="fw-bold text-primary mb-0 lh-1">{{map().code.title}}</h6>
-            {{value()[map().code.key]}}
+            @if(!value()[map().code.key]){
+                -
+            } @else{
+                {{value()[map().code.key]}}
+            }
         </div>
         <div>
             <h6 class="fw-bold text-primary mb-0 lh-1">{{map().desc.title}}</h6>
-            {{value()[map().desc.key]}}
+            @if(!value()[map().desc.key]){
+                -
+            } @else{
+                {{value()[map().desc.key]}}
+            }
         </div>
         @for (item of map().addons; track $index) {
             <div class="col-sm-12 col-md-6 col-lg-4">
                 <h6 class="fw-bold text-primary mb-0 lh-1">{{item.title}}</h6>
-                {{value()[item.key]}}
+                @if(!value()[item.key]){
+                    -
+                } @else{
+                    @if(item.formatter){
+                        {{item.formatter(value()[item.key])}}
+                    } @else {
+                        {{value()[item.key]}}
+                    }
+                }
+                
             </div>
         }
     </div>
