--- a/projects/ng-bootstrap-addons/inputs/src/ac-search-lov/components/ac-card/ac-card.component.scss
+++ b/projects/ng-bootstrap-addons/inputs/src/ac-search-lov/components/ac-card/ac-card.component.scss
@@ -1,6 +1,6 @@
 div:has(>a:hover), div:has(>a:focus), div:has(>a:active){
     transition: all ease-in-out 0.2s;
-    background-color: #f0f0f0;
+    background-color: inherit;
 }
 div:not(:has(>a:hover)):not(:has(>a:focus)):not(:has(>a:active)) {
     transition: all ease-in-out 0.2s;
