fix: remove responsive classes from addon item container in ac-card component

--- a/projects/ng-bootstrap-addons/inputs/src/ac-search-lov/components/ac-card/ac-card.component.html
+++ b/projects/ng-bootstrap-addons/inputs/src/ac-search-lov/components/ac-card/ac-card.component.html
@@ -22,7 +22,7 @@
             }
         </div>
         @for (item of map().addons; track $index) {
-            <div class="col-sm-12 col-md-6 col-lg-4">
+            <div>
                 <h6 class="fw-bold text-primary mb-0 lh-1">{{item.title}}</h6>
                 @if(!value()[item.key]){
                     -
