feat: add new field to show or hide some columns

--- a/projects/demo/src/app/components/ac-search-sample/ac-search-sample.component.html
+++ b/projects/demo/src/app/components/ac-search-sample/ac-search-sample.component.html
@@ -6,6 +6,7 @@
         searchName="s"
         format="[:imdbID] :Title (:Year)"
         [(ngModel)]="cdMovie"
+        [clearIfNotMatch]="true"
         [resultPath]="{lov: 'Search'}"
         required>
     </nba-ac-lov>
