--- a/projects/ng-bootstrap-addons/table/src/table.component.html
+++ b/projects/ng-bootstrap-addons/table/src/table.component.html
@@ -1,16 +1,20 @@
 <div class="card">
     @if(caption()){
-        <div class="p-3">
+        <div class="p-3 nba-caption">
             <ng-container *ngTemplateOutlet="caption()!"></ng-container>
-            @if(columns()?.length){
-                <nba-multiselect
-                    [options]="columnsOptions()"
-                    formGroupClass="col-12 col-sm-6 col-xl-2 mt-3"
-                    size="sm"
-                    label="Colunas"
-                    [(ngModel)]="selectedColumnsFields"
+            <div class="d-flex align-items-center flex-wrap justify-content-between gap-2 w-100">
+                <a href="javascript:;" class="btn btn-sm btn-outline-dark no-validate" (click)="clearFilters()">
+                    <i class="nba-filter-off"></i>
+                    Limpar
+                </a>
+                <input
+                    class="form-control form-control-sm w-auto no-validate"
+                    placeholder="Buscar..."
+                    [ngModel]="globalFilter()"
+                    (ngModelChange)="onGlobalFilterChange($event)"
                 />
-            }
+                <nba-col-multiselect [options]="columns() ?? []" [(values)]="selectedColumnsFields" />
+            </div>
         </div>
     }
     <div class="d-grid px-3">
