--- a/projects/ng-bootstrap-addons/table/src/table.component.scss
+++ b/projects/ng-bootstrap-addons/table/src/table.component.scss
@@ -1,12 +1,48 @@
-nba-table{
+nba-table {
+  --nba-table-radius: 0.25rem;
 
-  --nba-table-radius: .25rem;
+  .nba-caption {
+    i {
+      $filter-off: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-filter-off"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M8 4h12v2.172a2 2 0 0 1 -.586 1.414l-3.914 3.914m-.5 3.5v4l-6 2v-8.5l-4.48 -4.928a2 2 0 0 1 -.52 -1.345v-2.227" /><path d="M3 3l18 18" /></svg>');
 
-  .table{
+      $search: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-search"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 10a7 7 0 1 0 14 0a7 7 0 1 0 -14 0" /><path d="M21 21l-6 -6" /></svg>');
+
+      $menu: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="icon icon-tabler icons-tabler-filled icon-tabler-columns-3"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 2h2a1 1 0 0 1 1 1v18a1 1 0 0 1 -1 1h-2a2 2 0 0 1 -2 -2v-16a2 2 0 0 1 2 -2" /><path d="M9 3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v18a1 1 0 0 1 -1 1h-4a1 1 0 0 1 -1 -1z" /><path d="M18 2h2a2 2 0 0 1 2 2v16a2 2 0 0 1 -2 2h-2a1 1 0 0 1 -1 -1v-18a1 1 0 0 1 1 -1" /></svg>');
+
+      display: inline-block;
+      width: 1em;
+      height: 1em;
+      vertical-align: middle;
+
+      &.nba-filter-off::before {
+        mask: $filter-off;
+      }
+
+      &.nba-search::before {
+        mask: $search;
+      }
+
+      &.nba-menu::before {
+        mask: $menu;
+      }
+
+      &::before {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 100%;
+        background-color: currentColor;
+        mask-size: contain;
+        mask-repeat: no-repeat;
+        mask-position: center;
+      }
+    }
+  }
+
+  .table {
     .pagination {
       margin: 0;
       --bs-pagination-border-radius: var(--nba-table-radius);
     }
   }
-
 }
