feat: enhance AutoCompleteLov component with success and error outputs; update table component for column selection

--- a/projects/ng-bootstrap-addons/table/src/table.component.html
+++ b/projects/ng-bootstrap-addons/table/src/table.component.html
@@ -13,7 +13,7 @@
                     [ngModel]="globalFilter()"
                     (ngModelChange)="onGlobalFilterChange($event)"
                 />
-                <nba-col-multiselect [options]="columns() ?? []" [(values)]="selectedColumnsFields" />
+                <nba-col-multiselect [options]="columns() ?? []" [(values)]="selectedColumns" />
             </div>
         </div>
     }
