feat: conditionally render global filter input based on available fields

--- a/projects/ng-bootstrap-addons/table/src/table.component.html
+++ b/projects/ng-bootstrap-addons/table/src/table.component.html
@@ -7,12 +7,14 @@
                     <i class="nba-filter-off"></i>
                     Limpar
                 </a>
-                <input
-                    class="form-control form-control-sm w-auto no-validate"
-                    placeholder="Buscar..."
-                    [ngModel]="globalFilter()"
-                    (ngModelChange)="onGlobalFilterChange($event)"
-                />
+                @if(globalFilterFields().length){
+                    <input
+                        class="form-control form-control-sm w-auto no-validate"
+                        placeholder="Buscar..."
+                        [ngModel]="globalFilter()"
+                        (ngModelChange)="onGlobalFilterChange($event)"
+                    />
+                }
                 @if(columns()){
                     <nba-col-multiselect [options]="columns() ?? []" [(values)]="selectedColumns" />
                 }
