--- a/projects/ng-bootstrap-addons/table/src/table.component.html
+++ b/projects/ng-bootstrap-addons/table/src/table.component.html
@@ -16,7 +16,7 @@
                     />
                 }
                 @if(columns()){
-                    <nba-col-multiselect [options]="columns() ?? []" [(values)]="selectedColumns" />
+                    <nba-col-multiselect [options]="columns() ?? []" [(values)]="selectedColumnFields" />
                 }
             </div>
         </div>
