feat: add dynamic row attribute to textarea component

--- a/projects/ng-bootstrap-addons/textarea/src/textarea.component.html
+++ b/projects/ng-bootstrap-addons/textarea/src/textarea.component.html
@@ -8,6 +8,7 @@
                     [id]="inputId()"
                     [name]="inputId()"
                     [placeholder]="label()"
+                    [rows]="rows()"
                     [ngStyle]="{'height' : height() }"
                     #input
                 ></textarea>
