--- a/projects/demo/src/app/components/table-sample/table-sample.component.html
+++ b/projects/demo/src/app/components/table-sample/table-sample.component.html
@@ -5,6 +5,14 @@
     [itemsPerPage]="2"
     [globalFilterFields]="['name', 'country.name', 'representative.name']"
     [(selectedRows)]="selectedRows"
+    [columns]="[
+      {field: 'id', header:'ID', visible: false, type:'numeric'},
+      {field: 'name', header:'Nome', type:'text'},
+      {field: 'country.name', header:'País', type:'text'},
+      {field: 'representative.name', header:'Representante', type:'text'},
+      {field: 'date', header:'Data', type:'date'},
+      {field: 'verified', header:'Verificado', type:'boolean'}
+    ]"
   >
     <ng-template #caption>
       @if(selectedRows().length > 0){
