--- a/projects/ng-bootstrap-addons/table/src/components/column-filter-form/column-filter-form.component.html
+++ b/projects/ng-bootstrap-addons/table/src/components/column-filter-form/column-filter-form.component.html
@@ -7,7 +7,7 @@
       </ng-container>
     } 
     @else if (dynamicFilter()) {
-      <ng-container [ngTemplateOutlet]="dynamicFilter()!"></ng-container>
+      <ng-container *ngTemplateOutlet="dynamicFilter()!; context: { $implicit: state.value() }"></ng-container>
     } 
     @else {
       @switch (type()) {
