feat: enhance filter functionality in table components; update filter predicates and binding logic for improved state management

--- a/projects/demo/src/app/components/table-sample/table-sample.component.html
+++ b/projects/demo/src/app/components/table-sample/table-sample.component.html
@@ -31,16 +31,17 @@
               class="text-dark"
               nbaColumnHeader
               [field]="column.field"
-              (onApplyFilter)="dt.setFilter($event, filterByRepresentative)"
+              [filterPredicate]="filterByRepresentative"
               (onClearFilter)="selectedRepresentative = []"
             >
               {{ column.header }}
-              <ng-template #filter>
+              <ng-template let-value let-setValue="setValue" #filter>
                   <nba-multiselect
                     inputClass="no-validate"
                     label="Representante"
                     [options]="representativeOptions"
-                    [(ngModel)]="selectedRepresentative"
+                    [ngModel]="value"
+                    (ngModelChange)="setValue($event)"
                     [multiple]="false"
                   ></nba-multiselect>
               </ng-template>
