feat: implement TablePreferencesService for managing table preferences; refactor table component and directives to utilize new service

--- a/projects/demo/src/app/components/table-sample/table-sample.component.html
+++ b/projects/demo/src/app/components/table-sample/table-sample.component.html
@@ -25,7 +25,7 @@
       <tr>
         <th checkbox></th>
         <th width="2em"></th>
-        @for(column of columns;track $index){
+        @for(column of columns;track column.field){
           @if(column.field == 'representative.name'){
             <th
               class="text-dark"
