--- a/projects/ng-bootstrap-addons/table/src/table.component.html
+++ b/projects/ng-bootstrap-addons/table/src/table.component.html
@@ -30,7 +30,7 @@
                             columns: visibleColumns(),
                             sortField: sortField(),
                             sortDirection: sortDirection(),
-                            onSort: onSort.bind(this),
+                            onSort: setSort.bind(this),
                         }"></ng-container>
                     </thead>
                 }
