feat: update table directive to log detailed save information; add db-table attribute to nba-table component

--- a/projects/demo/src/app/components/table-sample/table-sample.component.html
+++ b/projects/demo/src/app/components/table-sample/table-sample.component.html
@@ -1,5 +1,5 @@
 <app-sample-container tagName="nba-table">
-  <nba-table #dt id="table-sample"
+  <nba-table #dt db-table id="table-sample"
     [multiple]="true"
     [value]="list()"
     [itemsPerPage]="2"
