feat: update imports in table directive and component; replace multiselect with input component in template

--- a/projects/demo/src/app/components/table-sample/table-sample.component.html
+++ b/projects/demo/src/app/components/table-sample/table-sample.component.html
@@ -35,14 +35,10 @@
             >
               {{ column.header }}
               <ng-template let-value let-setValue="setValue" #filter>
-                  <nba-multiselect
-                    inputClass="no-validate"
-                    label="Representante"
-                    [options]="cto.toOptions('representative.name')"
-                    [ngModel]="value"
-                    (ngModelChange)="setValue($event)"
-                    [multiple]="false"
-                  ></nba-multiselect>
+                <nba-input [datalist]="cto.toOptions('representative.name')"
+                  [ngModel]="value"
+                  (ngModelChange)="setValue($event)"
+                ></nba-input>
               </ng-template>
             </th>       
           }@else{
